test: index.adoc 수정

--- a/member-api/src/docs/asciidoc/index.adoc
+++ b/member-api/src/docs/asciidoc/index.adoc
@@ -25,6 +25,7 @@ endif::[]
 * link:hashtag-api-index.html[Hashtag API 목록]
 * link:image-api-index.html[Image API 목록]
 * link:member-api-index.html[Member API 목록]
+* link:member-answer-vote-api-index.html[MemberAnswerVote API 목록]
 * link:question-api-index.html[Question API 목록]
 * link:reservation-api-index.html[Reservation API 목록]
 * link:reservation-article-api-index.html[Reservation Article API 목록]
